# nitro-image

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: publishing.yml  testing.yml
examples/: 01_basics.py  02_resize_and_crop.py  03_transform.py  04_adjust_and_effects.py  05_formats.py  06_overlays.py  07_responsive.py  08_placeholders.py  09_optimize.py  10_presets.py  11_batch.py  12_loading.py  13_output.py  14_integrations.py  15_config_and_metadata.py  README.md  _sample.py
src/nitro_img/: __init__.py  batch.py  config.py  errors.py  image.py  integrations.py  loaders.py  pipeline.py  placeholder.py  presets.py  responsive.py  types.py  utils.py
src/nitro_img/operations/: adjust.py  crop.py  effects.py  metadata.py  overlay.py  resize.py  transform.py
src/nitro_img/output/: encode.py  export.py  optimize.py
test-app/: main.py
tests/: conftest.py  test_adjust.py  test_batch.py  test_crop.py  test_effects.py  test_image.py  test_integrations.py  test_metadata.py  test_optimize.py  test_output.py  test_overlay.py  test_parallel_batch.py  test_pipeline.py  test_placeholder.py  test_presets.py  test_resize.py  test_responsive.py
